# j-dep-analyzer

./: .env.example  .gitignore  DESIGN.md  README.md  alembic.ini  deps.html  pyproject.toml
.github/: copilot-instructions.md
migrations/: env.py
migrations/versions/: 001_initial_schema.py
src/: main.py
src/j_dep_analyzer/: __init__.py  cli.py  config.py  db.py  db_models.py  exceptions.py  graph.py  models.py  parser.py  scanner.py  visualize.py  visualize_html.py
src/j_dep_analyzer/templates/: base.html  dependencies_list.html  design_system.html  export.html  index.html  list.html  visualize.html
src/j_dep_analyzer/templates/partials/: artifacts_table.html  dependencies_table.html  upload_status.html
tests/: conftest.py  test_export.py  test_parser.py
