[project]
name = "j-dep-analyzer"
version = "0.1.0"
description = "Web app to upload Maven pom.xml files, parse dependencies, store them in SQLite or GCP CloudSQL PostgreSQL, and visualize them via an interactive UI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "lxml>=5.0.0",
  "pydantic>=2.0.0",
  "networkx>=3.0",
  "sqlmodel>=0.0.16",
  "fastapi[standard]>=0.110.0",
  "python-multipart>=0.0.9",
  "jinja2>=3.1.0",
  # PostgreSQL / CloudSQL support
  "pg8000>=1.30.0",
  "cloud-sql-python-connector[pg8000]>=1.0.0",
  "google-auth>=2.0.0",
  # Database migrations
  "alembic>=1.13.0",
]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
